# generate_coding_challenge_server

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-12386ec42c0739ef826708bf39d974f86b866d67c54dc25cb1e0eb946f815a5b.json  query-29f2d72e2cbe486589bc6929895bd501bf628a040da67ac5c69eb2652e3ba365.json  query-2ec5676a3c7c9f956a3e2de760b6535efbbbe6ad8faa385dc8f5f9bcbb5d3fcb.json  query-78357d6a72db20cb10cb7c64d45c7e80c1a3ef983289b37a99904a61f78f5507.json  query-8aa50c3e73565ef0797b0b983272d44d26c3bc5a82dc4444338ee4628b937000.json  query-a79196f11aa492165103b40b2b521daf937020143bf815d67f20cb19a7be8a2b.json  query-b06672582c8c0fa21f1ae232658848beaf73267a7fd2fc95ff5b6ca909ab83b4.json  query-dcbf309531662f56150c2f35b9cc4dae0ea1e2aef547764682636b7c5da6b600.json  query-e44d95842b14685ce9f7eb2a05844fa6d75c60dc1d53a20a5bd6a36f986bafa7.json
configuration/: base.yaml
migrations/: 20230809022436_init.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/domain/: algo_question.rs  applicant_name.rs  color.rs  mod.rs  nuid.rs  register_applicant.rs  submit_applicant.rs
src/routes/: applicants.rs  challenge.rs  forgot_token.rs  mod.rs  register.rs  submit.rs
tests/api/: applicants.rs  challenge.rs  forgot_token.rs  helpers.rs  main.rs  register.rs  submit.rs
