[package]
name = "generate_coding_challenge_server"
version = "0.1.1"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "generate_coding_challenge_server"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2.0"
serde-aux = "4"
unicode-segmentation = "1.7.1"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
rand = "0.8.5"
strum = { version = "0.25", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
claims = "0.7.0"
once_cell = "1.7.2"
maplit = "1.0.2"
serde_json = "1.0.104"
